Fix overlapping style problems

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600");
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
 
-@import "../../shared/settings.scss";
+@import "../../shared/styles/settings.scss";
 
 ::-webkit-input-placeholder { /* Chrome */
   color: $font-color;
@@ -37,15 +37,4 @@ body {
     margin-bottom: 0.3em;
     margin-top: 0.3em;
   }
-}
-
-.bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-image: url('../../assets/img/wallhaven.png');
-  background-size: cover;
-  z-index: -2;
-  height: 100vh;
-  width: 100vw;
 }
